fix bootstrap collapse toggle and add nav pill navigation

--- a/client/stylesheets/sass/globals/_general.scss
+++ b/client/stylesheets/sass/globals/_general.scss
@@ -1,3 +1,8 @@
+/* for fixed top nav need this to push content down */
+body {
+  padding-top: 70px;
+}
+
 strong {
   font-family: "Roboto Slab", sans-serif;
 }
